--- a/static/styles.css
+++ b/static/styles.css
@@ -565,7 +565,7 @@ header {
 }
 
 .pl-thumb{
-  width: 75%;
+  width: 85%;
   margin-bottom: 3rem;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
@@ -1295,6 +1295,10 @@ header {
 
 .create-playlist-button:active{
   background-color: white;
+}
+
+#create-playlist-get-started{
+  width: 40%;
 }
 
 .prompt-container {
@@ -2522,14 +2526,6 @@ header {
 
 /* RE-SIZING */
 
-@media screen and (max-width: 1450px) {
-
-  .pl-thumb-name, .disc-thumb-name{
-    font-size: 2.25rem;
-  }
-
-}
-
 @media screen and (max-width: 1350px) {
 
   .landing-header{
@@ -2540,7 +2536,7 @@ header {
 @media screen and (max-width: 1305px) {
 
   .pl-thumb, .create-header{
-    width: 60%;
+    width: 75%;
   }
 
   #pl-container, #successfulpl-container{
@@ -2551,9 +2547,9 @@ header {
     width: 65%
   }
 
-  .pl-thumb-name, .disc-thumb-name{
+  /* .pl-thumb-name, .disc-thumb-name{
     font-size: 2rem;
-  }
+  } */
 
   .pl-thumb-tracks div{
     font-size: .8rem;
@@ -2568,18 +2564,22 @@ header {
   }
 }
 
-@media screen and (max-width: 1225px) {
+/* @media screen and (max-width: 1225px) {
 
   .pl-thumb, .create-header{
-    width: 67.5%;
+    width: 85%;
   }
 
-}
+} */
 
 @media screen and (max-width: 1150px) {
 
   .pl-thumb, .create-header{
     width: 75%;
+  }
+
+    .pl-thumb-name, .disc-thumb-name{
+    font-size: 2.25rem;
   }
 
   .pl-thumb-img{
@@ -2609,6 +2609,10 @@ header {
   .landing-left-container{
     text-align: center;
     flex: 1;
+  }
+
+  .pl-thumb-name, .disc-thumb-name{
+    font-size: 2rem;
   }
 
   .landing{
@@ -2845,7 +2849,7 @@ header {
   
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 775px) {
 
   .prompt-input-left{
     flex: 1.4
@@ -2899,6 +2903,10 @@ header {
 
   .pl-thumb-createdAt{
     font-size: .75rem;
+  }
+
+  #create-playlist-get-started{
+    width: 50%;
   }
 
 }
@@ -3038,6 +3046,10 @@ header {
     width: 60%;
   }
 
+  #create-playlist-get-started{
+    width: 60%;
+  }
+
 }
 
 @media screen and (max-width: 585px) {
@@ -3107,6 +3119,10 @@ header {
   .aiplaylist-name-content{
     margin-top: .25rem;
   }
+
+  #create-playlist-get-started{
+    width: 70%;
+  }
   
 }
 
@@ -3174,6 +3190,10 @@ header {
   font-size: 2.65rem;
 }
 
+#create-playlist-get-started{
+  width: 80%;
+}
+
 }
 
 @media screen and (max-width: 435px) {
@@ -3221,11 +3241,19 @@ header {
   padding-right: .5rem;
 }
 
+#create-playlist-get-started{
+  width: 90%;
+}
+
 }
 
 @media screen and (max-width: 390px) {
   .landing-header{
     font-size: 2.15rem;
+  }
+
+  #create-playlist-get-started{
+    width: 100%;
   }
   
 }
