--- a/static/styles.css
+++ b/static/styles.css
@@ -210,9 +210,6 @@ header {
 .nav {
   display: flex;
   justify-content: space-around;
-  /* align-items: center;
-  margin-left: auto;
-  width: inherit; */
 }
 
 
@@ -763,9 +760,12 @@ header {
 .pl-thumb-user-name, .disc-thumb-user-name{
   display: flex;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.25rem;
   /* color: var(--spotifyGreen); */
   text-shadow: 1px 1px 3px rgb(0, 0, 0);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .pl-thumb-user-name a, .disc-thumb-user-name a{
@@ -1160,6 +1160,7 @@ header {
 .tracklisting-title, .aiplaylist-name-title{
   font-weight: 600;
   margin-right: .25rem;
+  font-size: 1.15rem;
 }
 
 .tracks-to-include{
@@ -1222,7 +1223,7 @@ header {
   /* flex-grow: 1; */
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   background-color: #cecece;
   color: #121212;
   font-family: 'Montserrat', sans-serif;
@@ -1231,13 +1232,13 @@ header {
 
 .prompt-input:focus {
   outline: none;
-  border: 1px solid var(--spotifyGreen);
+  border: 2px solid var(--spotifyGreen);
   /* box-shadow: 0 0 10px var(--spotifyGreen); */
 }
 
 .prompt-input-left{
   flex: 1.85;
-  margin-right: .75rem;
+  margin-right: 1rem;
   flex-direction: column;
 }
 
@@ -1246,10 +1247,6 @@ header {
   font-size: .85rem;
   margin-bottom: .25rem;
   padding-left: .25rem;
-}
-
-.prompt-input-right-inner{
-  flex-direction: column;
 }
 
 .prompt-input-right{
@@ -1274,6 +1271,20 @@ header {
   padding-top: 1.15rem;
 }
 
+.prompt-input-right-inner{
+  flex-direction: column;
+  flex: .75;
+}
+
+.prompt-track-count{
+  width: 100%;
+}
+
+.create-playlist-button-container{
+  flex: 1;
+  margin-left: 1rem;
+}
+
 .create-playlist-button {
   display: inline-block;
   white-space: normal;
@@ -1282,7 +1293,7 @@ header {
   padding: 0.5rem 1rem;
   border-radius: 8px;
   border: none;
-  margin-left: .75rem;
+  width: 100%;
   cursor: pointer;
   word-wrap: break-word;
   font-family: 'Montserrat', sans-serif;
@@ -1592,7 +1603,7 @@ header {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   text-align: center;
-  color: #777777;
+  color: #999999;
 }
 
 .bar {
@@ -1690,6 +1701,7 @@ header {
   display: flex;
   justify-content: column;
   border: 2px solid transparent;
+
 }
 
 .playlist-item-checkbox {
@@ -2787,6 +2799,10 @@ header {
     display: none;
   }
 
+  .prompt-input-right-inner{
+    flex: .65;
+  }
+
 }
 
 @media screen and (max-width: 980px) {
@@ -2931,10 +2947,18 @@ header {
   .landing-header{
     font-size: 3rem;
   }
+
+  .playlist-header{
+    width: 350px
+  }
   
 }
 
 @media screen and (max-width: 775px) {
+
+  .pl-thumb-img{
+    border-top-right-radius: 5px;
+  }
 
   .prompt-input-left{
     flex: 1.4
@@ -2966,10 +2990,6 @@ header {
     font-size: .9rem;
   }
 
-  .playlist-header{
-    width: 350px
-  }
-
   .options-title{
     font-size: 2rem;
   }
@@ -2983,7 +3003,7 @@ header {
   }
 
   #create-example-prompts-window{
-    padding-right: .25rem;
+    margin-right: .25rem;
   }
 
   .pl-thumb-createdAt{
@@ -3000,15 +3020,15 @@ header {
   .prompt-input-left{
     flex: 1.3
   }
+
+  .playlist-header{
+    width: 300px
+  }
 }
 
 @media screen and (max-width: 710px) {
   .prompt-input-left{
     flex: 1
-  }
-
-  .playlist-header{
-    width: 300px
   }
 
   .landing-header{
@@ -3017,6 +3037,12 @@ header {
 
   .how-it-works{
     font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .playlist-header{
+    width: 225px
   }
 }
 
@@ -3035,11 +3061,24 @@ header {
   .prompt-input-right{
     margin-top: .75rem;
     justify-content: center;
+    display: flex;
+  }
+
+  .prompt-input-right-inner{
+    flex: 1;
+  }
+
+  .prompt-track-count{
+    width: 100%;
   }
 
   .create-playlist-button-container{
-    padding-top: .75rem;
-    margin-left: .75rem;
+    flex: 1;
+  }
+
+  .create-playlist-button{
+    width: 100%;
+    margin-left: 0;
   }
 
   .title{
@@ -3051,14 +3090,14 @@ header {
   }
 
   .toggle-button.MP, .toggle-button.DISC {
-    width: 300px;
+    width: 350px;
   }
 
   .playlist-button, .playlist-button.DISC {
-    width: 300px;
+    width: 350px;
   }
 
-  .discoverable-title, .playlist-header{
+  .playlist-item-info{
     font-size: .9rem;
   }
 
@@ -3070,16 +3109,16 @@ header {
     font-size: .77rem;
   }
 
+  .outer-playlist-container{
+    padding-right: .35rem;
+  }
+
   .pro-option{
     width: 85%;
   }
 
   .options-title{
     font-size: 1.85rem;
-  }
-
-  .playlist-header{
-    width: 250px
   }
 
   .landing-left-container{
@@ -3123,7 +3162,7 @@ header {
   }
 
   .create-header{
-    font-size: 2.5rem;
+    font-size: 2.75rem;
     padding-right: .5rem;
   }
   
@@ -3148,6 +3187,25 @@ header {
     font-size: 1rem;
   }
 
+  .playlist-header{
+    width: 200px;
+    margin-left: 0;
+    height: 22px;
+  }
+
+  .aiplaylist-name-left, .aitracklist-left{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .aiplaylist-name-content{
+    align-self: center;
+    margin-top: .25rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
 }
 
 @media screen and (max-width: 570px) {
@@ -3164,7 +3222,7 @@ header {
     font-size: .8rem;
   }
 
-  .discoverable-title, .playlist-header{
+  .playlist-item-info{
     font-size: .8rem;
   }
 
@@ -3188,21 +3246,6 @@ header {
 
   .tracks-to-include{
     font-size: .65rem;
-  }
-
-  .playlist-header{
-    width: 200px;
-    margin-left: 0;
-    height: 22px;
-  }
-
-  .aiplaylist-name-left{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .aiplaylist-name-content{
-    margin-top: .25rem;
   }
 
   #create-playlist-get-started{
@@ -3238,15 +3281,15 @@ header {
   }
 
   .pl-thumb-user-name, .disc-thumb-user-name{
-    font-size: .95rem;
+    font-size: 1.15rem;
   }
 
   /* .profstats div{
     font-size: .7rem;
   } */
 
-  .playlist-header{
-    font-size: .7rem;
+  .playlist-header, .aiplaylist-name-content{
+    font-size: .85rem;
   }
 
   .prompt-options{
@@ -3265,7 +3308,19 @@ header {
   }
 
   .create-header{
-    font-size: 2rem;
+    font-size: 2.5rem;
+  }
+
+  .toggle-button.MP, .toggle-button.DISC {
+    width: 320px;
+  }
+
+  .playlist-button, .playlist-button.DISC {
+    width: 320px;
+  }
+
+  .prompt-input-right-inner{
+    flex: .5;
   }
 }
 
@@ -3279,9 +3334,18 @@ header {
   width: 80%;
 }
 
+.outer-playlist-container{
+  padding-right: .5rem;
+}
+
 }
 
 @media screen and (max-width: 435px) {
+
+.nav{
+    width: 100%;
+}
+
 
 .aitracklist-left, .aiplaylist-name-left{
   flex-direction: column;
@@ -3322,9 +3386,9 @@ header {
   margin-left: .25rem;
 }
 
-#create-example-prompts-window{
+/* #create-example-prompts-window{
   padding-right: .5rem;
-}
+} */
 
 #create-playlist-get-started{
   width: 90%;
@@ -3332,9 +3396,24 @@ header {
 
 }
 
+@media screen and (max-width: 420px) {
+  .toggle-button.MP, .toggle-button.DISC {
+    width: 300px;
+  }
+  
+  .playlist-button, .playlist-button.DISC {
+    width: 300px;
+  }
+  
+}
+
 @media screen and (max-width: 390px) {
   .landing-header{
     font-size: 2.15rem;
+  }
+
+  .playlist-header{
+    width: 150px;
   }
   
 }
