--- a/static/styles.css
+++ b/static/styles.css
@@ -11,12 +11,25 @@
   --spotifyGreen: #1DB954;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("/static/wavesbg2.jpeg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body{
   margin: 0;
   margin-top: 1rem;
-  background-image: url("/static/wavesbg2.jpeg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-color: #121212;
   color: white;
 
@@ -243,6 +256,11 @@ header {
   text-overflow: ellipsis;
 }
 
+.prof-spot-userId a:hover{
+  color: white;
+  transition: 0.35s
+}
+
 #prof-container-top{
 
   background-color: #242424;
@@ -385,16 +403,6 @@ header {
   border: 1px solid white;
 }
 
-.user-message {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-  background-color: blue;
-  border: 1px solid blue;
-}
-
 /* PlaylistType & AI Prompt Styling */
 .playlist-options {
   display: flex;
@@ -412,7 +420,7 @@ header {
 }
 
 .pro-option {
-  background-color: #242424;
+  background-color: #171717;
   border-radius: 10px;
   margin-bottom: 1.5rem;
   padding: 2rem;
@@ -1964,7 +1972,11 @@ header {
 .userCheck-buttons{
   display: flex;
   justify-content: center;
-  margin-top: .75rem;
+  margin-top: 1.25rem;
+}
+
+.userCheck-content{
+  font-size: 1rem;
 }
 
 /* Error modal styling end */
@@ -2050,7 +2062,6 @@ header {
   align-items: center;
   width: 100%;
   box-sizing: border-box; /* Include padding in height calculation */
-  border: 1px solid blue;
 }
 
 
@@ -2507,7 +2518,6 @@ header {
   width:100%;
   text-shadow: 1px 1px 4px rgb(5, 5, 5);
   box-shadow: 0px 8px 16px 5px rgba(0, 0, 0, 0.5);
-  border: 1px solid transparent;
 }
 
 #info-links{
@@ -2931,6 +2941,18 @@ header {
     flex: .65;
   }
 
+  .info-icon-container{
+    display: none;
+  }
+
+  #info-popup{
+    display: none;
+  }
+
+  .dropdown-about{
+    display: inline;
+  }
+
 }
 
 @media screen and (max-width: 980px) {
@@ -3130,14 +3152,6 @@ header {
     font-size: 2rem;
   }
 
-  .info-icon-container{
-    display: none;
-  }
-
-  .dropdown-about{
-    display: inline;
-  }
-
   #create-example-prompts-window{
     margin-right: .25rem;
   }
@@ -3327,6 +3341,10 @@ header {
     font-size: 1.5rem;
   }
 
+  .userCheck-content{
+    font-size: .9rem;
+  }
+
 }
 
 @media screen and (max-width: 585px) {
@@ -3426,6 +3444,7 @@ header {
     margin: 1rem;
     margin-top: 0;
     height: 34vh;
+    width: 100%
   }
 
   .step:last-child{
@@ -3479,7 +3498,7 @@ header {
 }
 
 @media screen and (max-width: 500px) {
-  .title{
+  .title, .landing-title{
     font-size: 3.15rem;
   }
 
@@ -3556,6 +3575,10 @@ header {
 
 .removeCheck-title{
   font-size: 1.25rem;
+}
+
+.userCheck-content{
+  font-size: .75rem;
 }
 
 }
